--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+        <h1>Hyun Sik Kong</h1>
+          <p>i love ice cream but i cant have dairy</p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+        <div id = "exercise2">
+            <ul>
+              <li><a href="https://www.linkedin.com/in/konghyunsik7/" target="_blank"></a></li>
+              <li><a href="https://portal.truecoders.io/dashboard" target="_blank"></a></li>
+              <li><a href="https://www.google.com/" target="_blank"></a></li>
+            </ul>
+        </div>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="images/example.png" alt="profile picture">
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        <span> I look down at the board.</span> <u>"The point isn't to win?"</u>  I asked. <b>"The
+        point"</b>  Bredon said grandly, <i>"is to play a beautiful game."</i>  He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
         would I want to win anything other than a beautiful game?"
       </p>
@@ -33,7 +43,8 @@
       <!-- Complete Exercise 5 HERE -->
       <div>
         <div>
-          <div>
+          <nav class="menu">
+            <ul class= "menus">
             <span>
               <a href="/">Home</a>
             </span>
@@ -43,43 +54,63 @@
             <span>
               <a href="/projects">Projects</a>
             </span>
-          </div>
+            </ul>
+          </nav>
         </div>
       </div>
 
       <div>
-        <div>
+        <main>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
-            <h2>Sub Heading</h2>
+        </main>
+
+        <section class="sports">
+            <h2>Sports I like to play!</h2>
+              <ul>
+                <li>basketball</li>
+                <li>soccer</li>
+                <li>swimming</li>
+                <li>cycling</li>
+              </ul>
             <div>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-          <div>
-            <h2>Sub Heading</h2>
+          </section>
+
+          <section class="food">
+            <h2>Food I like to eat!</h2>
+              <ul>
+                  <li>steak</li>
+                  <li>kimchi</li>
+                  <li>ramen</li>
+              </ul>
             <p>Lorem ipsum...</p>
-            <div>
-              <h3>Another Sub Heading</h3>
-              <p>Lorem ipsum...</p>
-            </div>
-          </div>
-        </div>
-	</div>
+          </section>  
+
+          <section class="myLinks">
+              <h3>myLinks</h3>
+              <ul>
+                <li><a href="https://www.linkedin.com/in/konghyunsik7" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/konghyunsik7" target="_blank">GitHub</a></li>
+                <li><a href="https://www.codewars.com/users/konghyunsik7">Codewars</a></li>
+                <li><a href="https://www.google.com" target="_blank">Google.com</a></li>
+                <li><a href="https://portal.truecoders.io/dashboarda">TrueCoders</a></li>
+              </ul>
+          </section>
+      </div>
+
 
       <div>
         <div>
-          <div>
+          <nav class="THE LAW">
             <span>
               <a href="/privacy">Privacy Policy</a>
             </span>
-            <span>
+            <article class = "Terms&Conditions">
               <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
+            </article>
+          </nav>
         </div>
 
         <div>
@@ -88,6 +119,8 @@
         </div>
       </div>
     </div>
-	
+	<footer>
+    Thank you for enjoying my website :)
+  </footer>
   </body>
 </html>
